--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,6 +6,18 @@
         <!-- Blocks may include default content. -->
         {{ .Site.Title }}
         {{ end }}</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@200;900&display=swap" rel="stylesheet">
+<style>
+    body {
+        font-family: 'Exo 2', sans-serif;
+        font-weight: 200;
+    }
+    h1, h2, h3, h4, h5, h6, strong {
+        font-weight: 900;
+    }
+</style>
+
 </head>
 <body>
 <!-- Code that all your templates share, like a header -->
