--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,30 +2,22 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>{{ block "title" . }}
-        <!-- Blocks may include default content. -->
-        {{ .Site.Title }}
-        {{ end }}</title>
-
+    <title>{{ block "title" . }}{{ .Site.Title }}{{ end }}</title>
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@200;900&display=swap" rel="stylesheet">
-<style>
-    body {
-        font-family: 'Exo 2', sans-serif;
-        font-weight: 200;
-    }
-    h1, h2, h3, h4, h5, h6, strong {
-        font-weight: 900;
-    }
-</style>
-
+    <style>
+        body {
+            font-family: 'Exo 2', sans-serif;
+            font-weight: 200;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        h1, h2, h3, h4, h5, h6, strong {
+            font-weight: 900;
+        }
+    </style>
 </head>
 <body>
-<!-- Code that all your templates share, like a header -->
-{{ block "main" . }}
-<!-- The part of the page that begins to differ between templates -->
-{{ end }}
-{{ block "footer" . }}
-<!-- More shared code, perhaps a footer but that can be overridden if need be in  -->
-{{ end }}
+{{ block "main" . }}{{ end }}
+{{ block "footer" . }}{{ end }}
 </body>
 </html>
