--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="utf-8">
     <title>{{ block "title" . }}{{ .Site.Title }}{{ end }}</title>
-    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@200;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;900&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Exo 2', sans-serif;
-            font-weight: 200;
+            font-weight: 400;
             max-width: 800px;
             margin: 0 auto;
+            color: #333;
         }
         h1, h2, h3, h4, h5, h6, strong {
             font-weight: 900;
+            color: #111;
         }
     </style>
 </head>
